--- a/src/main/webapp/WEB-INF/templates/listOfFlights.html
+++ b/src/main/webapp/WEB-INF/templates/listOfFlights.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>List of Flights</title>
-    <link rel="stylesheet" type="text/css" media="all" href="../css/styles.css" th:href="@{/css/styles.css}"/>
+    <link rel="stylesheet" type="text/css" media="all" href="../../css/styles.css" th:href="@{/css/styles.css}"/>
 </head>
 <body>
 <table class="container">
@@ -19,22 +19,26 @@
         <th><h1>Airline</h1></th>
         <th><h1>Airline Code</h1></th>
         <th><h1>Gate</h1></th>
-        <th><h1>Flight Number</h1></th>
+        <th><h1>Economy Price</h1></th>
+        <th><h1>Economy Plus Price</h1></th>
+        <th><h1>First Class Price</h1></th>
     </tr>
     </thead>
     <tbody>
     <tr th:each="flights : ${flightsFound}">
-        <td th:text="${flights?.flightNumber}">Google</td>
-        <td th:text="${flights?.departureCity?.iataCode}">9518</td>
-        <td th:text="${flights?.departureCity?.name}">6369</td>
-        <td th:text="${flights?.destinationCity?.iataCode}">01:32:50</td>
-        <td th:text="${flights?.destinationCity?.name}">01:32:50</td>
-        <td th:text="${flights?.scheduledDepartureDateTime}">01:32:50</td>
-        <td th:text="${flights?.estimatedDepartureDateTime}">01:32:50</td>
-        <td th:text="${flights?.airline}">01:32:50</td>
-        <td th:text="${flights?.gate}">01:32:50</td>
-        <td th:text="${flights?.status}">01:32:50</td>
-        <td th:text="${flights?.price}">01:32:50</td>
+        <td th:text="${flights?.flightNumber}"></td>
+        <td th:text="${flights?.departureCity?.iataCode}"></td>
+        <td th:text="${flights?.departureCity?.name}"></td>
+        <td th:text="${flights?.destinationCity?.iataCode}"></td>
+        <td th:text="${flights?.destinationCity?.name}"></td>
+        <td th:text="${flights?.scheduledDepartureDateTime}"></td>
+        <td th:text="${flights?.estimatedDepartureDateTime}"></td>
+        <td th:text="${flights?.airline}"></td>
+        <td th:text="${flights?.gate}"></td>
+        <td th:text="${flights?.status}"></td>
+        <td th:text="${flights?.price?.get(0)?.getEconomy()}"></td>
+        <td th:text="${flights?.price?.get(0)?.getEconomyPlus()}"></td>
+        <td th:text="${flights?.price?.get(0)?.getFirstClass()}"></td>
     </tr>
     </tbody>
 </table>
